@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/files/eblits/src_install-2.7.eblit,v 1.1 2008/03/23 18:03:03 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/files/eblits/src_install-2.6.eblit,v 1.1 2008/03/24 19:45:15 vapier Exp $
 
 toolchain-glibc_src_install() {
 	# These should not be set, else the
